# tess-vetter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REFERENCES.md  RELEASING.md  THIRD_PARTY_NOTICES.md  coverage.core.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  physics-regression.yml  release.yml
docs/: Makefile  api.rst  cli_contracts.md  conf.py  index.rst  installation.rst  quickstart.rst  reference_sources.md  report_external_charting_seam.md  stability.rst  tutorials.rst
docs/_autosummary/: bittr_tess_vetter.api.ActivityResult.rst  bittr_tess_vetter.api.ApertureConflict.rst  bittr_tess_vetter.api.ApertureHypothesisFit.rst  bittr_tess_vetter.api.Candidate.rst  bittr_tess_vetter.api.CheckResult.rst  bittr_tess_vetter.api.EvidenceProvenance.rst  bittr_tess_vetter.api.HypothesisScore.rst  bittr_tess_vetter.api.LightCurve.rst  bittr_tess_vetter.api.LocalizationVerdict.rst  bittr_tess_vetter.api.MatchClass.rst  bittr_tess_vetter.api.MlxT0RefinementResult.rst  bittr_tess_vetter.api.MlxTopKScoreResult.rst  bittr_tess_vetter.api.MultiSectorConsensus.rst  bittr_tess_vetter.api.PeriodogramPeak.rst  bittr_tess_vetter.api.PeriodogramResult.rst  bittr_tess_vetter.api.PixelVetReport.rst  bittr_tess_vetter.api.STANDARD_PRESET.rst  bittr_tess_vetter.api.StackedTransit.rst  bittr_tess_vetter.api.TPFStamp.rst  bittr_tess_vetter.api.TTVSearchBudget.rst  bittr_tess_vetter.api.TransitFitResult.rst  bittr_tess_vetter.api.TransitTime.rst  bittr_tess_vetter.api.TriceratopsFppPreset.rst  bittr_tess_vetter.api.VettingBundleResult.rst  bittr_tess_vetter.api.aggregate_multi_sector.rst  bittr_tess_vetter.api.analyze_ttvs.rst  bittr_tess_vetter.api.aperture_dependence.rst  bittr_tess_vetter.api.build_index_from_csv.rst  bittr_tess_vetter.api.build_prf_model.rst  bittr_tess_vetter.api.calculate_fpp.rst  bittr_tess_vetter.api.cap_neighbors.rst  bittr_tess_vetter.api.centroid_shift.rst  bittr_tess_vetter.api.check_tolerance.rst  bittr_tess_vetter.api.checks_to_evidence_items.rst  bittr_tess_vetter.api.classify_matches.rst  bittr_tess_vetter.api.compute_aperture_family_depth_curve.rst  bittr_tess_vetter.api.compute_bls_model.rst  bittr_tess_vetter.api.compute_depth_over_depth_err_snr.rst  bittr_tess_vetter.api.compute_evidence_code_hash.rst  bittr_tess_vetter.api.compute_transit_model.rst  (+35 more)
docs/tutorials/: 00-quick-fp-kill.ipynb  01-basic-vetting.ipynb  02-periodogram-detection.ipynb  03-pixel-analysis.ipynb  04-real-candidate-validation.ipynb  05-extended-metrics.ipynb  06-toi-5807-robustness.ipynb  07-toi-5807-consolidated-validation.ipynb  08-toi-5807-end-to-end.ipynb  09-toi-5807-validation-walkthrough.ipynb  10-toi-5807-check-by-check.ipynb  10-toi-5807-check-by-check.md  blend_localization.md
docs/verification/: confidence_semantics.md  feature_truth_spec.md
examples/: blend_localization_tic188646744.py
scripts/: exec_notebook_until.py  release_smoke.sh  render_toi4510_html.py  sync_notebook_expected_outputs.py  verify_plots.py
src/bittr_tess_vetter/: __init__.py  errors.py
src/tess_vetter/: __init__.py  __main__.py  errors.py
tests/: test_errors.py  test_packaging_version_integrity.py  test_vendor_triceratops_numerics.py
tests/activity/: __init__.py  conftest.py  test_primitives.py  test_rotation_context.py
tests/api/: test_api_pixel_helpers.py  test_api_pixel_localize.py  test_api_pixel_localize_multi_sector.py
tests/catalogs/: test_crossmatch.py  test_exofop_disk_cache.py  test_exoplanet_archive_matcher.py  test_gaia_client.py  test_simbad_client.py  test_snapshot_id.py  test_spatial.py  test_store.py  test_time_conventions.py  test_toi_resolution.py
tests/cli/: __init__.py  test_btv_activity_cli_contract.py  test_btv_canonical_verdict_contract_cross_command.py  test_btv_contrast_curves_cli_contract.py  test_btv_dilution_cli_contract.py  test_btv_doctor_cli.py  test_btv_enrich_cli.py  test_btv_ephemeris_reliability_cli_contract.py  test_btv_fetch_cli_contract.py  test_btv_fit_cli_contract.py  test_btv_followup_cli_contract.py  test_btv_fpp_cli_contract.py  test_btv_localize_cli_contract.py  test_btv_localize_host_cli_contract.py  test_btv_model_compete_cli_contract.py  test_btv_new_commands_registration.py  test_btv_periodogram_cli_contract.py  test_btv_pipeline_run_cli_contract.py  test_btv_pipeline_run_cli_smoke_real.py  test_btv_resolve_neighbors_cli_contract.py  test_btv_rv_feasibility_cli_contract.py  test_btv_systematics_proxy_cli_contract.py  test_btv_timing_cli_contract.py  test_btv_toi_query_cli_contract.py  test_btv_vet_report_cli_contract.py  test_cli_smoke.py  test_contrast_curve_support_shim.py  test_contrast_curve_support_truncation.py  test_detrend_grid_cli.py  test_diagnostics_report_inputs.py  test_entrypoint_alias_metadata.py  test_fpp_compute_guidance.py  test_fpp_replicate_contract.py  test_measure_sectors_cli.py  test_module_entrypoint.py  test_phase_a_cli_contracts.py  test_phase_b1_sector_workflow.py  test_progress_metadata.py  test_report_seed.py  test_resolve_stellar_cli.py  (+1 more)
tests/contrast_curves/: test_contrast_curves_package.py
tests/exofop/: test_filelist_parse.py  test_notes_and_toi_parse.py
tests/followup/: test_processing.py  test_service.py
tests/io/: test_cache.py  test_mast_client.py  test_session_cache.py
tests/pipeline/: test_composable_pipeline_executor.py  test_pipeline_arg_adapter.py  test_pipeline_evidence_table.py  test_pipeline_validate_cli.py  test_ref_resolver.py
tests/pixel/: __init__.py  test_aperture.py  test_aperture_family.py  test_centroid.py  test_difference.py  test_localization.py  test_report.py  test_tpf.py  test_tpf_fits.py  test_wcs_localization.py  test_wcs_utils.py
tests/platform/: test_exofop_toi_table_query.py
tests/recovery/: __init__.py  conftest.py  test_primitives.py
tests/report/: test_physics_invariants_alias.py  (+3 more)
tests/test_api/: __init__.py  (+79 more)
working_docs/: README.md  v01_odd_even_depth_design.md
(+1434 files in other folders)
