[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bittr-tess-vetter"
version = "0.0.1"
description = "Domain-only TESS transit detection and vetting library (array-in/array-out)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [{ name = "bittr-tess-vetter contributors" }]
keywords = ["tess", "astronomy", "exoplanet", "transit", "vetting"]

dependencies = [
  "numpy>=1.24.0,<2.4.0",
  "scipy>=1.10.0",
  "pydantic>=2.4.0",  # CVE-2024-3772 fix
  "astropy>=5.0.0",
  "setuptools>=78.1.1",  # CVE-2025-47273 fix
  "requests>=2.32.4",  # CVE-2024-47081 fix
  "transitleastsquares>=1.32",
  # transitleastsquares depends on numba; pin to a Python 3.12-compatible release.
  "numba>=0.63.0",
  "emcee>=3.1.6",
  "arviz>=0.23.0",
]

[project.optional-dependencies]
wotan = [
  "wotan>=1.1",
]
# ldtk is GPL-2.0 licensed; kept optional to maintain MIT compatibility for core package
ldtk = [
  "ldtk>=1.8.5",
]
# TRICERATOPS+ vendored dependencies (duplicates of core deps removed: emcee, numba, arviz)
triceratops = [
  "lightkurve>=2.0.0",
  "pytransit>=2.2",
  "mechanicalsoup>=1.0.0",
  "seaborn>=0.13.0",
  "pyrr>=0.10.3",
  "celerite>=0.4.0",
  "corner>=2.2.1",
  "pandas>=2.0.0",
  "matplotlib>=3.5.1",
  "astroquery>=0.4.6",
]
docs = [
  "sphinx>=7.0",
  "furo",
  "sphinx-autodoc-typehints",
  "myst-parser",
]
all = ["bittr-tess-vetter[wotan,ldtk,triceratops]"]

[tool.hatch.build.targets.wheel]
packages = ["src/bittr_tess_vetter"]
include = ["src/bittr_tess_vetter/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "slow: long-running tests (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100
# Exclude vendored code from linting
exclude = ["src/bittr_tess_vetter/ext/triceratops_plus_vendor/triceratops"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "mypy>=1.0.0",
]

