[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tess-vetter"
version = "0.2.2"
description = "Domain-only TESS transit detection and vetting library (array-in/array-out)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "tess-vetter contributors" }]
keywords = ["tess", "astronomy", "exoplanet", "transit", "vetting"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Typing :: Typed",
]
urls = { Repository = "https://github.com/bittr-ai/bittr-tess-vetter", Issues = "https://github.com/bittr-ai/bittr-tess-vetter/issues" }

dependencies = [
  "numpy>=1.24.0,<2.4.0",
  "scipy>=1.10.0",
  "pydantic>=2.4.0",  # CVE-2024-3772 fix
  "astropy>=5.0.0",
  "requests>=2.32.4",  # CVE-2024-47081 fix
  "click>=8.0.0",  # CLI framework
  "filelock>=3.12.0",  # Concurrent-safe file writes
  "pandas>=2.3.3",
  "mechanicalsoup>=1.4.0",
  "pytransit>=2.6.17",
]

[project.scripts]
btv = "tess_vetter.cli.enrich_cli:main"

[project.optional-dependencies]
# Transit detection (TLS + numba for JIT compilation)
tls = [
  "transitleastsquares>=1.32",
  "numba>=0.63.0",
]
# MCMC fitting (emcee + arviz for diagnostics)
fit = [
  "emcee>=3.1.6",
  "arviz>=0.23.0",
]
wotan = [
  "wotan>=1.1",
]
# Physical transit model fitting (batman)
batman = [
  "batman-package>=2.4.0",
]
# Apple Silicon GPU acceleration (MLX)
mlx = [
  "mlx>=0.0.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
# External vetter integration (ModShift/SWEET)
exovetter = [
  "exovetter>=0.0.0",
]
# ldtk is GPL-2.0 licensed; kept optional to maintain BSD-3-Clause compatibility for core package
ldtk = [
  "ldtk>=1.8.5",
]
# TRICERATOPS+ vendored dependencies (duplicates of core deps removed: emcee, numba, arviz)
# Note: triceratops extra includes pytransit (GPL-2.0). Installing changes
# the effective license of your environment from BSD-3-Clause.
triceratops = [
  "lightkurve>=2.0.0",
  "pytransit>=2.2",
  "mechanicalsoup>=1.0.0",
  "seaborn>=0.13.0",
  "pyrr>=0.10.3",
  "celerite>=0.4.0",
  "corner>=2.2.1",
  "pandas>=2.0.0",
  "matplotlib>=3.5.1",
  "astroquery>=0.4.6",
]
docs = [
  "sphinx>=7.0",
  "furo",
  "sphinx-autodoc-typehints",
  "myst-parser",
  # Notebook execution (for traceable tutorial outputs)
  "nbconvert>=7.16.0",
  "nbformat>=5.10.0",
  "ipykernel>=6.29.0",
]
plotting = [
  "matplotlib>=3.5.1",
]
all = [
  "transitleastsquares>=1.32",
  "numba>=0.63.0",
  "emcee>=3.1.6",
  "arviz>=0.23.0",
  "wotan>=1.1",
  "batman-package>=2.4.0",
  "mlx>=0.0.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "exovetter>=0.0.0",
  "ldtk>=1.8.5",
  "lightkurve>=2.0.0",
  "pytransit>=2.2",
  "mechanicalsoup>=1.0.0",
  "seaborn>=0.13.0",
  "pyrr>=0.10.3",
  "celerite>=0.4.0",
  "corner>=2.2.1",
  "pandas>=2.0.0",
  "matplotlib>=3.5.1",
  "astroquery>=0.4.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tess_vetter"]
include = ["src/tess_vetter/py.typed"]

[tool.hatch.build.targets.sdist]
# Keep the sdist lean and reproducible: ship source + tests + docs, but exclude
# local caches, build artifacts, and internal working docs.
only-include = [
  "src",
  "tests",
  "docs",
  "scripts/verify_plots.py",
  "pyproject.toml",
  "README.md",
  "LICENSE",
  "CITATION.cff",
  "REFERENCES.md",
  "THIRD_PARTY_NOTICES.md",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "CHANGELOG.md",
  "RELEASING.md",
  ".readthedocs.yaml",
]
exclude = [
  ".uv-cache",
  ".venv",
  "dist",
  "build",
  "working_docs",
  "persistent_cache",
  "mplconfig",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".github",
  "uv.lock",
  "**/.DS_Store",
  "**/.ipynb_checkpoints",
  "docs/_build",
  "docs/_autosummary",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "slow: long-running tests (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100
# Exclude vendored code and notebooks from linting
exclude = [
  "src/tess_vetter/ext/triceratops_plus_vendor/triceratops",
  "docs/tutorials/*.ipynb",
]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
# Relaxed mode - strict typing is a P2 goal
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_decorators = false
exclude = ["src/tess_vetter/ext/triceratops_plus_vendor/"]

[[tool.mypy.overrides]]
module = [
  "numpy",
  "numpy.*",
  "scipy",
  "scipy.*",
  "astropy",
  "astropy.*",
  "requests",
  "requests.*",
  "pandas",
  "pandas.*",
  "arviz",
  "arviz.*",
  "emcee",
  "emcee.*",
  "numba",
  "numba.*",
  "wotan",
  "wotan.*",
  "lightkurve",
  "lightkurve.*",
  "transitleastsquares",
  "transitleastsquares.*",
  "pytransit",
  "pytransit.*",
  "mechanicalsoup",
  "mechanicalsoup.*",
  "celerite",
  "celerite.*",
  "ldtk",
  "ldtk.*",
  "astroquery",
  "astroquery.*",
  "corner",
  "corner.*",
  "seaborn",
  "seaborn.*",
  "matplotlib",
  "matplotlib.*",
  "lxml",
  "lxml.*",
  "batman",
  "batman.*",
  "exoplanet",
  "exoplanet.*",
  "platformdirs",
  "platformdirs.*",
]
ignore_missing_imports = true

# Ignore errors in api/__init__.py lazy loading machinery
[[tool.mypy.overrides]]
module = "tess_vetter.api"
disable_error_code = ["union-attr", "no-redef"]

# CLI modules have arg-type issues from argparse - defer fixing
[[tool.mypy.overrides]]
module = "tess_vetter.cli.*"
ignore_errors = true

# Triceratops FPP has type issues from external lib integration
[[tool.mypy.overrides]]
module = "tess_vetter.validation.triceratops_fpp"
ignore_errors = true

# These modules have minor type issues to fix later (P3 backlog)
[[tool.mypy.overrides]]
module = [
  "tess_vetter.api.transit_fit",
  "tess_vetter.transit.batman_model",
  "tess_vetter.compute.periodogram",
  "tess_vetter.compute.mlx_detection",
  "tess_vetter.validation.checks_pixel",
  "tess_vetter.validation.exovetter_checks",
  "tess_vetter.validation.ephemeris_sensitivity_sweep",
  "tess_vetter.pixel.wcs_localization",
  "tess_vetter.platform.io.mast_client",
]
ignore_errors = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.14.10",
    "mypy>=1.0.0",
    "hatch>=1.16.2",
]
